# predict_shipping_cost

./: README.md  pyproject.toml
data/: df_cleared.parquet  synthetic_delivery_requests_modified.csv
docs/: Proposta de Desafio Técnico_ Logística e Custo de Frete.docx
notebook/: eda.ipynb  grafo.html  ml_training.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
